samples/nginx/nginx-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-sample-deploy
  labels:
    app: nginx-sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-sample
  template:
    metadata:
      labels:
        app: nginx-sample
    spec:
      containers:
      - name: nginx-sample
        image: nginx:latest
        ports:
        - containerPort: 80
