samples/nginx/nginx-svc.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-sample-svc
spec:
  selector:
    app: nginx-sample
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
